# jupyterlab_templates

./: .bumpversion.cfg  .copier-answers.yaml  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  NOTICE  README.md  azure-pipelines.yml  jest.config.js  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tsconfig.json
.github/: CODE_OF_CONDUCT.md  dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yaml  build.yml  codeql-analysis.yml  codeql.yml  copier.yaml  cve-scanning-node.yml  cve-scanning-python.yml  cve-scanning.yml  license-scanning-node.yml  license-scanning-python.yml  license-scanning.yaml  license-scanning.yml  publish.yml  semgrep.yml
binder/: postBuild  requirements.txt
ci/: azure-pipelines.yml
docs/: Makefile  api.md  conf.py  make.bat  requirements.txt  safety-policy.yml
js/: .eslintrc.js  allow-list.json  babel.config.js  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
js/src/: activate.js  execute.js  index.js  index.ts  widget.js
js/style/: index.css
js/tests/: activate.test.js  activate.test.ts  allow-list.json  assetsTransformer.js  export.test.js  export.test.ts  fileMock.js  setup.js  styleMock.js
jupyter-config/: jupyterlab_templates.json
jupyter-config/jupyter_notebook_config.d/: jupyterlab_templates.json
jupyter-config/notebook_templates/jupyterlab_templates/: Sample.ipynb
jupyterlab_templates/: __init__.py  _version.py  extension.py  s3.py
jupyterlab_templates/extension/: install.json
jupyterlab_templates/tests/: __init__.py  test_all.py  test_extension.py  test_init.py  test_s3_loader.py
jupyterlab_templates/tests/js/: activate.test.ts  export.test.ts  fileMock.js
src/: index.ts  request.ts
style/: index.css
tests/: test_all.py  test_extension.py  test_init.py
tests/js/: activate.test.ts  assetsTransformer.js  export.test.ts  test.js
