[build-system]
requires = [
    "hatchling",
    "hatch-js",
    "jupyterlab>=4,<5",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-templates"
authors = [
    {name = "the jupyterlab_templates authors", email = "t.paine154@gmail.com"},
]
description = "notebook templates for jupyterlab"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.5.3"
requires-python = ">=3.10"
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab Extension",
    "Templates",
    "FINOS",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "jupyterlab>=4,<5",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-dist",
    "codespell",
    "hatch-js",
    "hatchling",
    "mdformat",
    "mdformat-tables>=1",
    "jupyterlab>=4,<5",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "ty",
    "uv",
    "wheel",
]

[project.scripts]

[project.urls]
Repository = "https://github.com/finos/jupyterlab_templates"
Homepage = "https://github.com/finos/jupyterlab_templates"

[tool.bumpversion]
current_version = "0.5.3"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "jupyterlab_templates/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "js/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[[tool.bumpversion.files]]
filename = ":binder/requirements.txt"
search = "jupyterlab_templates=={current_version}"
replace = "jupyterlab_templates=={new_version}"

[tool.coverage.run]
branch = true
omit = [
    "jupyterlab_templates/tests/integration/",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = [
    "jupyterlab_templates/nbextension",
    "jupyterlab_templates/labextension",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = [
    "jupyterlab_templates",
    "js",
]
exclude = [
    "binder",
    "js/dist",
    "js/node_modules",
]

[tool.hatch.build.targets.wheel]
packages = [
    "jupyterlab_templates",
]
exclude = [
    "binder",
    "js",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_templates/labextension" = "share/jupyter/labextensions/jupyterlab-templates"
"jupyterlab_templates/extension/install.json" = "share/jupyter/labextensions/jupyterlab-templates/install.json"
"jupyterlab_templates/extension/jupyterlab_templates.json" = "etc/jupyter/jupyter_server_config.d/jupyterlab_templates.json"
"jupyterlab_templates/templates/notebook_templates" = "share/jupyter/notebook"

[tool.hatch.build.hooks.hatch-js]
path = "js"
build_cmd = "build"
tool = "pnpm"
targets = [
    "jupyterlab_templates/nbextension/static/notebook.js",
    "jupyterlab_templates/labextension/package.json",
]

[tool.pytest.ini_options]
addopts = [
    "-vvv",
    "--junitxml=junit.xml",
]
testpaths = "jupyterlab_templates/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = [
    "jupyterlab_templates",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
]
