[bdist_wheel]
universal=1

[metadata]
description_file = README.md
long_description_content_type=text/markdown

[flake8]
ignore=E203, W503
max-line-length=200

[manifix]
known-excludes =
    .git*
    .git/**/*
    .travis.yml
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    js/package-lock.json
    js/lib
    build
    dist
    Untitled*.ipynb
