[bumpversion]
current_version = 0.3.2
commit = True
tag = True

[bdist_wheel]
universal = 1

[metadata]
description_file = README.md
long_description_content_type = text/markdown

[flake8]
ignore = E203, W503
max-line-length = 200
per-file-ignores = 
	**/__init__.py: F401

[bumpversion:file:jupyterlab_templates/_version.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:js/package.json]
search = "version": "{current_version}"
replace = "version": "{new_version}"

[check-manifest]
ignore = 
	jupyterlab_templates/labextension/**
	jupyterlab_templates/nbextension/**
	js/**
